tests/snapshots/render_snapshots__sql_modal_with_completion.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | default | - | - | no dsn                                         
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│Connections   │┌ [2] Inspector ───────────────────────────────────────────────┐
│ Current: loca││(select a table)                                              │
│              ││                                                              │
│Tables ╭ SQL Editor ──────────────────────────────────────────────────╮       │
│public.│SELECT * FROM us█                                             │       │
│public.│                                                              │       │
│public.│                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │Ready │ Alt+Enter: Run  Ctrl+L: Clear  Esc: Close             │       │
│       ╰ Alt+Enter: Run │ Ctrl+L: Clear │ Esc: Close──────────────────╯       │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
⌥Enter:Run  ↑↓←→:Move  Esc:Close
