tests/snapshots/render_snapshots__table_picker_overlay.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | default | - | - | no dsn | localhost:5432/test                   
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│public.user   │┌ [2] Inspector ───────────────────────────────────────────────┐
│public.post   ││(select a table)                                              │
│public.comm   │╭ Table Picker ────────────────────────────────╮               │
│              ││  > user█                                     │               │
│              ││▸   public.users                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │───────────────┘
│              ││                                              │───────────────┐
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              ││                                              │               │
│              │╰ 1 tables │ ↑↓ Navigate │ Enter Select ───────╯               │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
Enter:Select  type:Filter  ↑↓:Navigate  Esc:Close
