tests/snapshots/render_snapshots__table_selection_with_preview.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | default | - | - | no dsn | localhost:5432/test                   
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│> public.user │┌ [2] Inspector ───────────────────────────────────────────────┐
│  public.post ││Name    Type           Null   PK   Default                    │
│  public.comm ││id      integer               ✓                               │
│              ││name    varchar(255)                                          │
│              ││email   varchar(255)   ✓                                      │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │└──────────────────────────────────────────────────────────────┘
│              │┌ [3] Result [PREVIEW] (2 rows, 15ms) ─────────────────────────┐
│              ││id   name    email                                            │
│              ││1    Alice   alice@example.com                                │
│              ││2    Bob     bob@example.com                                  │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  c:Connect  ^P:Tables  ^K:Palette  1/2/3:Pane  f:F
